--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,7 +1,14 @@
 {
   "store.home": { 
     "blocks": [
-      
+      "rich-text"
     ]
+  },
+  "rich-text":{
+    "props":{
+      "text": "*HELLO, WORDL!*",
+      "textAlignment": "CENTER",
+      "textPosition": "CENTER"
+    }
   }
 }
