--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -29,14 +29,11 @@
   },
   "info-card#button-left": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining chrome",
-      "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-      "callToActionMode": "link",
       "callToActionText": "Go to Collection",
-      "callToActionUrl": "/sale/d",
-      "textPosition": "left",
-      "blockClass": "metal"
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
+      "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
+      "textPosition": "left"
     }
   }
 }
